--- a/configs/config_maxwell_20perc.yaml
+++ b/configs/config_maxwell_20perc.yaml
@@ -1,14 +1,14 @@
 train_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/datasets_sampling_graph_bootstrap_20/train'
 valid_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/datasets_sampling_graph_bootstrap_20/valid'
-dataset : 'LUXE-TRACKING-FBX-7.0'
-log_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/GNN_training_sampling_wl1_reg_sgd/'
+dataset : 'LUXE-TRACKING-20Perc'
+log_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/GNN_training_sampling_wl1_reg_sgd_20perc/'
 run_type : 'new_run'
 gpu : '0'
 n_files : 100
 n_valid : 10
 n_train : 90
 lr_c : 0.001
-batch_size : 1
+batch_size : 10
 n_iters : 4
 n_epoch : 100
 TEST_every : 90
