configs for training

--- a/configs/training/config_maxwell_20perc.yaml
+++ b/configs/training/config_maxwell_20perc.yaml
@@ -4,17 +4,17 @@ dataset : 'LUXE-TRACKING-20Perc'
 log_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/GNN_training_sampling_wl1_reg_sgd_20perc/'
 run_type : 'new_run'
 gpu : '0'
-n_files : 100
-n_valid : 10
-n_train : 90
+n_files : 150
+n_valid : 30
+n_train : 120
 lr_c : 0.001
 batch_size : 10
 n_iters : 4
-n_epoch : 100
+n_epoch : 200
 TEST_every : 90
 hid_dim : 128
 network : 'CNN'
-optimizer : 'SGD'
+optimizer : 'Adam'
 loss_func : 'BinaryCrossentropy'
 n_thread : 48
 log_verbosity : 1
