--- a/configs/training/config_maxwell_5perc.yaml
+++ b/configs/training/config_maxwell_5perc.yaml
@@ -1,7 +1,7 @@
 train_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/datasets_sampling_graph_bootstrap_5/train'
 valid_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/datasets_sampling_graph_bootstrap_5/valid'
 dataset : 'LUXE-TRACKING-5Perc'
-log_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/GNN_training_sampling_wl1_reg_adam_5perc/'
+log_dir : '/home/amohamed/GPFS/dust/ilc/user/amohamed/HTC/graph_building/LUXETrackML/GNN_training_sampling_wl1_reg_sgd_noreg_5perc_noreg/'
 run_type : 'new_run'
 gpu : '0'
 n_files : 300
@@ -14,7 +14,7 @@ n_epoch : 200
 TEST_every : 90
 hid_dim : 128
 network : 'CNN'
-optimizer : 'Adam'
+optimizer : 'SGD'
 loss_func : 'BinaryCrossentropy'
 n_thread : 48
 log_verbosity : 1
